force-app/main/default/objects/ABDC_Reference__c/ABDC_Reference__c.object-meta.xml
<CustomObject>
    <label>ABDC Reference</label>
    <nameField>
        <displayFormat>ABDC-{00000}</displayFormat>
        <label>ABDC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABDC Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>