force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_ABDC_Ranking__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ABDC_Ranking__c</fullName>
    <label>ABDC Ranking</label>
    <length>2</length>
    <type>Text</type>
</CustomField>