force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_ISSN_Space__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ISSN_Space__c</fullName>
    <label>ISSN Space</label>
    <length>20</length>
    <type>Text</type>
</CustomField>