force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_Journal_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Journal_Name__c</fullName>
    <label>Journal Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>