force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Metric_Date__c</fullName>
    <label>Metric Date</label>
    <type>Date</type>
</CustomField>