force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Start_Year__c</fullName>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>