force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_X4_digit_FoR__c.field-meta.xml
<CustomField>
    <fullName>I_RS_X4_digit_FoR__c</fullName>
    <label>4-digit FoR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>