force-app/main/default/objects/ABDC_Reference__c/fields/I_RS_X6_digit_FoR__c.field-meta.xml
<CustomField>
    <fullName>I_RS_X6_digit_FoR__c</fullName>
    <label>6-digit FoR</label>
    <length>6</length>
    <type>Text</type>
</CustomField>