force-app/main/default/objects/ABDC_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Current__c</columns>
    <columns>I_RS_Metric_Date__c</columns>
    <columns>I_RS_ISSN__c</columns>
    <columns>I_RS_Journal_Name__c</columns>
    <columns>I_RS_Start_Year__c</columns>
    <columns>I_RS_Website__c</columns>
    <columns>I_RS_X4_digit_FoR__c</columns>
    <columns>I_RS_X6_digit_FoR__c</columns>
    <columns>I_RS_ABDC_Ranking__c</columns>
    <columns>I_RS_ISSN_Space__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>